--- a/src/assets/forms.css
+++ b/src/assets/forms.css
@@ -1,8 +1,20 @@
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 form input {
   @apply text-gray-700;
 }
 .schema-row {
-  @apply flex flex-wrap;
+  @apply flex flex-wrap -m-2;
 }
 
 .schema-col {
