--- a/src/assets/forms.css
+++ b/src/assets/forms.css
@@ -20,6 +20,13 @@ form input {
 .schema-col {
   @apply flex flex-col items-stretch flex-auto m-4 text-left;
 }
+.label {
+  @apply mb-2 font-bold leading-tight tracking-wide text-gray-700;
+}
+
+.checkbox__label {
+  @apply inline-flex items-center px-2;
+}
 
 .label--required {
   @apply text-red-700;
